# Qualcomm_pro

./: README.md  qurt_thrd_limit.rar
CDSP/FastCV/: Readme.md
CDSP/FastCV/rotate_img/: CMakeLists.txt  Makefile  README.md  UbuntuARM.min  UbuntuARM_deps.min  all.mak  android.min  cpu.min  hexagon.min  hexagon_deps.min  pak  snapcraft.yaml
CDSP/FastCV/rotate_img/inc/: rotate_img.idl
CDSP/FastCV/rotate_img/src/: rotate_img.c  rotate_img_imp.c
